--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^3.0.8"
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.3"
 autopep8 = "^1.5.3"
+ipython = "^7.16.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
