--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["DavidRinSE <davidrichardsonIN@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 django = "^3.0.8"
+pillow = "^7.2.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.3"
