--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["DavidRinSE <davidrichardsonIN@gmail.com>"]
 python = "^3.8"
 django = "^3.0.8"
 pillow = "^7.2.0"
+python-dotenv = "^0.14.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.3"
